# basanos

./: .gitignore  .gitignore.rej  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  Makefile.rej  README.md  REPOSITORY_ANALYSIS.md  SECURITY.md  cosmic-ray.toml  mkdocs.yml  plan.md  problem.md  pyproject.toml  pytest.ini  rhiza-template-issue.md  ruff.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: analyser.md
.github/workflows/: copilot-setup-steps.yml  copilot-setup-steps.yml.rej  dep_compat_test.yml  link-check.yml  notebooks.yml  paper.yml  pip_audit.yml  rhiza_benchmarks.yml  rhiza_benchmarks.yml.rej  rhiza_book.yml  rhiza_book.yml.rej  rhiza_ci.yml  rhiza_ci.yml.rej  rhiza_dep_compat_test.yml  rhiza_deptry.yml  rhiza_docs.yml  rhiza_license.yml  rhiza_licenses.yml  rhiza_marimo.yml  rhiza_marimo.yml.rej  rhiza_pip_audit.yml  rhiza_release.yml  rhiza_release.yml.rej  rhiza_security.yml  rhiza_semgrep.yml  rhiza_typecheck.yml  rhiza_validate.yml
.rhiza/: template-bundles.yml  template.yml
.rhiza/make.d/: README.md  agentic.mk  docs.mk  test.mk
.rhiza/requirements/: tests.txt
.rhiza/tests/api/: test_makefile_targets.py
.rhiza/tests/security/: test_security_patterns.py
benchmarks/results/: baseline.json
book/marimo/notebooks/: demo.py  diagnostics.py  end_to_end.py  ewm_benchmark.py  ewm_corr_comparison.py  factor_model_guide.py  shrinkage_guide.py
docs/: ARCHITECTURE.md  MARIMO.md  REPOSITORY_ANALYSIS.md  api.md  concepts.md  factor-models.md  mkdocs-base.yml  performance.md  streaming.md
docs/adr/: 0001-rhiza-framework-dependency.md  README.md
docs/api/: config.md  engine.md  exceptions.md  models.md  stream.md
output/: config_report.html  config_with_sweep.html  my_report.html  report.html
paper/: basanos.bib  basanos.tex
recipe/: meta.yaml
scripts/: check_test_layout.py
src/basanos/: __init__.py  _deprecation.py  _logging.py  exceptions.py  main.py
src/basanos/analytics/: __init__.py  _async.py  _plots.py  _portfolio_data.py  _report.py  _stats.py  portfolio.py
src/basanos/math/: __init__.py  _async.py  _config.py  _config_report.py  _engine_core.py  _engine_diagnostics.py  _engine_ic.py  _engine_performance.py  _engine_protocol.py  _engine_solve.py  _engine_solve_base.py  _engine_validation.py  _ewm_corr.py  _factor_model.py  _linalg.py  _signal.py  _stream.py  _stream_io.py  _stream_math.py  _stream_solve.py  _stream_state.py  optimizer.py  taipan.py
src/basanos/templates/: _base.html  config_report.html  portfolio_report.html
tests/: conftest.py  test_deprecation.py  test_exceptions.py  test_logging.py  test_main.py
tests/benchmarks/: test_basanos.py
tests/fuzz/: fuzz_signal.py
tests/resources/: cor_tensor.npy  golden_2asset_cash_position.npy  golden_ewma_warmup_cash_position.npy
tests/test_analytics/: __init__.py  test_async_portfolio.py  test_plots.py  test_portfolio.py  test_portfolio_correlation_heatmap.py  test_portfolio_data.py  test_portfolio_lag.py  test_portfolio_lagged_plot.py  test_portfolio_lead_lag_ir_plot.py  test_portfolio_monthly.py  test_portfolio_property.py  test_portfolio_smoothed_zero.py  test_portfolio_tilt_timing.py  test_portfolio_truncate.py  test_portfolio_validations.py  test_report.py  test_shim.py  test_stats.py  test_stats_init.py  test_stats_more.py  test_stats_property.py
tests/test_integration/: __init__.py  test_engine_integration.py  test_notebook_execution.py
tests/test_math/: __init__.py  test_async_engine.py  test_config_report.py  test_correlation_matrices.py  test_cross_mode_consistency.py  test_demo_notebook.py  test_diagnostics_notebook.py  test_end_to_end_notebook.py  test_engine_protocol.py  test_ewm_benchmark_notebook.py  test_ewm_covariance.py  test_factor_model.py  test_factor_model_notebook.py  test_linalg.py  test_linalg_property.py  test_numerical_regression.py  test_numerical_stability.py  test_optimizer.py  test_optimizer_edge_cases.py  test_optimizer_extra.py  test_optimizer_portfolio.py  test_optimizer_property.py  test_paper_example.py  test_shrinkage_notebook.py  test_signal.py  test_signal_property.py  test_stream.py  test_taipan.py  test_taipan_edge_cases.py  test_taipan_extra.py  test_taipan_portfolio.py
