[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basanos"
version = "0.5.1"
description = "Correlation-aware portfolio optimization and analytics for Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "jquantstats>=0.2.0",
    "numpy>=2.4",
    "plotly>=6.6.0",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Jebel-Quant/basanos"
Repository = "https://github.com/Jebel-Quant/basanos"
Issues = "https://github.com/Jebel-Quant/basanos/issues"


[dependency-groups]
dev = [
    "hypothesis>=6.0.0",
    "marimo>=0.21.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.0",
    "ty>=0.0.23,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/basanos"]

[tool.deptry]
# Explicit module name map so deptry doesn't need to inspect installed packages
package_module_name_map = { "jinja2" = "jinja2", "jquantstats" = "jquantstats", "numpy" = "numpy", "plotly" = "plotly", "polars" = "polars", "pydantic" = "pydantic", "scipy" = "scipy", "hypothesis" = "hypothesis", "marimo" = "marimo", "pandas" = "pandas", "pyarrow" = "pyarrow", "ty" = "ty" }

[tool.coverage.report]
fail_under = 90
exclude_also = [
    # TYPE_CHECKING blocks are never executed at runtime
    "if TYPE_CHECKING:",
    # Protocol bodies are structural type stubs, not runnable code
    "class .*\\(Protocol\\):",
    "\\.\\.\\.\\s*$",
]

[tool.coverage.run]
omit = [
    # Pure type-stubs file; only imported under TYPE_CHECKING
    "src/basanos/math/_engine_protocol.py",
]

[tool.ty.environment]
python-version = "3.12"
