[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basanos"
version = "0.6.2"
description = "Correlation-aware portfolio optimization and analytics for Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "jquantstats>=0.2.0",
    "numpy>=2.4",
    "plotly>=6.6.0",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Jebel-Quant/basanos"
Repository = "https://github.com/Jebel-Quant/basanos"
Issues = "https://github.com/Jebel-Quant/basanos/issues"


[dependency-groups]
dev = [
    "marimo>=0.21.0",
    "pandas>=2.0",
    "pyarrow>=14.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/basanos"]

[tool.deptry]
# Explicit module name map so deptry doesn't need to inspect installed packages

[tool.deptry.package_module_name_map]
"jinja2" = "jinja2"
"jquantstats" = "jquantstats"
"numpy" = "numpy"
"plotly" = "plotly"
"polars" = "polars"
"pydantic" = "pydantic"
"scipy" = "scipy"
"marimo" = "marimo"
"pandas" = "pandas"
"pyarrow" = "pyarrow"

[tool.coverage.report]
fail_under = 90
exclude_also = [
    # TYPE_CHECKING blocks are never executed at runtime
    "if TYPE_CHECKING:",
    # Protocol bodies are structural type stubs, not runnable code
    "class .*\\(Protocol\\):",
    "\\.\\.\\.\\s*$",
]

[tool.coverage.run]
omit = [
    # Pure type-stubs file; only imported under TYPE_CHECKING
    "src/basanos/math/_engine_protocol.py",
]

[tool.interrogate]
fail-under = 100
ignore-init-method = true
ignore-magic = true
exclude = ["book"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Catch calls where argument types do not match the declared parameter types.
call-non-callable = "error"
# Catch overload resolution failures.
no-matching-overload = "error"
