[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basanos"
version = "0.7.2"
description = "Correlation-aware portfolio optimization and analytics for Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvx-linalg>=0.6",
    "jinja2>=3",
    "jquantstats>=0.9",
    "numpy>=2.4",
    "plotly>=6.6.0",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    { name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/Jebel-Quant/basanos"
Repository = "https://github.com/Jebel-Quant/basanos"
Issues = "https://github.com/Jebel-Quant/basanos/issues"


[dependency-groups]
dev = [
    "marimo>=0.21.0",
    "pandas>=2.0",
    "pyarrow>=14.0"
]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.150.0",
]
lint = [
    "pre-commit>=4.0",
    "deptry>=0.22",
    "ty>=0.0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/basanos"]

[tool.deptry]
# Explicit module name map so deptry doesn't need to inspect installed packages

[tool.deptry.package_module_name_map]
"cvx-linalg" = "cvx"
"jinja2" = "jinja2"
"jquantstats" = "jquantstats"
"numpy" = "numpy"
"plotly" = "plotly"
"polars" = "polars"
"pydantic" = "pydantic"
"scipy" = "scipy"
"marimo" = "marimo"
"pandas" = "pandas"
"pyarrow" = "pyarrow"

[tool.coverage.report]
fail_under = 90
exclude_also = [
    # TYPE_CHECKING blocks are never executed at runtime
    "if TYPE_CHECKING:",
    # Protocol bodies are structural type stubs, not runnable code
    "class .*\\(Protocol\\):",
    "\\.\\.\\.\\s*$",
]

[tool.coverage.run]
omit = [
    # Pure type-stubs file; only imported under TYPE_CHECKING
    "src/basanos/math/_engine_protocol.py",
]

[tool.interrogate]
fail-under = 100
ignore-init-method = true
ignore-magic = true
exclude = ["book"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Catch calls where argument types do not match the declared parameter types.
call-non-callable = "error"
# Catch overload resolution failures.
no-matching-overload = "error"
